Refactor code and remove SQL exception handling
The commit includes removal of unused imports related to SQL exception handling in the Main.java file, indicating that these exceptions are no longer expected. It also includes changes in Youtube.java shifting from using JacksonFactory to GsonFactory for JSON processing, and some refactoring for cleaner code. Unnecessary public variables in MYSQL.java file have been removed as well. The AudioPlayerHelper.java file has also been tweaked to fetch the first track of a playlist in a more efficient way.